# plans

./: .gitignore  README.md  index.html  localhost_2023-06-03_14-04-33.report.html  package-lock.json  package.json  vite.config.ts.timestamp-1689249364028-0d4635cd41845.mjs
migrations/2023-12-13-162340_create_plans_db/: down.sql  up.sql
src/: App.css  App.svelte  App.tsx  app.css  common.css  consts.ts  styles.css  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/prisma/: schema.prisma
src-tauri/src/: app_state.rs  commands.rs  conn.rs  consts.rs  database.rs  date_structures.rs  event_structures.rs  file_manager.rs  main.rs  schema.rs  utils.rs
src-tauri/src/color_structures/: color.rs
src-tauri/src/commands/: color.rs  date.rs  event.rs  mod.rs
src-tauri/src/conn/: conn.rs  mod.rs
src-tauri/src/date_structures/: day_data.rs  day_details.rs  mod.rs  month_data.rs  month_details.rs  year_details.rs
src-tauri/src/event_structures/: activity.rs  calendar_deadline.rs  calendar_entry.rs  calendar_event.rs  db_calendar_entry.rs  deadline_details.rs  entry.rs  event_details.rs  event_type.rs  mod.rs
src/components/add_event_dialog/: AddEventDialog.tsx
src/components/add_event_prompt/: AddEventPrompt.css  AddEventPrompt.tsx
src/components/button/: Button.css  Button.tsx
src/components/calendar_bar/: CalendarBar.css  CalendarBar.tsx
src/components/color_button/: ColorButton.css  ColorButton.tsx
src/components/color_picker/: ColorPicker.css  ColorPicker.tsx
src/components/control_bar/: ControlBar.css  ControlBar.tsx
src/components/day/: Day.tsx
src/components/deadline_box/: DeadlineBox.css  DeadlineBox.tsx
src/components/dialog/: Dialog.css  Dialog.tsx
src/components/edit_event_dialog/: EditEventDialog.css  EditEventDialog.tsx
src/components/event_box/: EventBox.css  EventBox.tsx
src/components/event_input/: EventInput.css  EventInput.tsx
src/components/event_prompt/: EventPrompt.css  EventPrompt.tsx
src/components/events_table/: EventsTable.css  EventsTable.tsx
src/components/events_table_column/: EventsTableColumn.css  EventsTableColumn.tsx
src/components/fill/: Fill.tsx
src/components/planner/: Planner.css  Planner.tsx
src/components/planner_bar/: PlannerBar.css  PlannerBar.tsx
src/components/select/: Select.css  Select.tsx
src/components/sidebar/: Sidebar.css  Sidebar.tsx
src/components/table_input/: TableInput.tsx
src/components/titlebar/: Titlebar.tsx
src/components/top_bar/: TopBar.css  TopBar.tsx
src/components/week/: Week.css  Week.tsx
src/components/week_selector/: WeekSelector.css  WeekSelector.tsx
src/lib/: consts.ts  stores.ts
src/lib/classes/: index.ts
src/lib/components/: CalendarPane.svelte  CalendarPaneDay.svelte  CalendarPaneHead.svelte  DayDetailsActivity.svelte  DayDetailsDeadline.svelte  DayDetailsPane.svelte  DayTimeline.svelte  IconButton.svelte
src/lib/functions/: formatDate.ts  index.ts  shades.ts  tauri.ts
src/lib/interfaces/: IDayDetails.ts  index.ts  (+3 more)
src/planner/: Planner.css  Planner.tsx
src/sidebar/: Sidebar.css  Sidebar.tsx
src/styles/: common.css  dark_theme.css  index.ts  light_theme.css
src/utils/: classes.ts  consts.ts  functions.ts  interfaces.ts
(+29 files in other folders)
