[package]
name = "plans"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = [ "dialog-all", "window-hide", "window-unminimize", "window-unmaximize", "window-maximize", "window-show", "window-close", "window-start-dragging", "window-minimize", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "*", features = ["serde"] }
serde_json = "1.0"
home = "*"
tokio = { version = "1.35.1", features = ["macros", "rt"] }
diesel = {version = "2.1.4", features = ["sqlite", "chrono"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
