[package]
name = "plans"
version = "0.1.0"
description = "A Tauri App"
authors = ["Dudu7352"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.*", features = [] }

[dependencies]
tauri = { version = "1.7.*", features = [
    "dialog-all",
    "window-hide",
    "window-unminimize",
    "window-unmaximize",
    "window-maximize",
    "window-show",
    "window-close",
    "window-start-dragging",
    "window-minimize",
    "shell-open",
] }
serde = { version = "1.*", features = ["derive"] }
chrono = { version = "*", features = ["serde"] }
serde_json = "1.*"
home = "*"
tokio = { version = "1.*", features = ["macros", "rt"] }
libsqlite3-sys = { version = "*", features = ["bundled"] }
diesel = { version = "2.*", features = ["sqlite", "chrono"] }
diesel_migrations = "2.*"
uuid = { version = "1.*", features = ["v4"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
